# roster

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
roster_generator/: __init__.py  airlines.py  clean_data.py  config.py  markov.py  output.py  scheduled_flight_time.py  scheduled_turnaround.py  time_window.py
roster_generator/auxiliary/: airlines.py  airports.py  fleet.py  routes.py
roster_generator/data_cleaning/: __init__.py  clean_bts.py  clean_data.py
roster_generator/distribution_analysis/: _initial_conditions_builders.py  _initial_conditions_sampling.py  _initial_conditions_types.py  _initial_conditions_validation.py  initial_conditions.py  markov.py  scheduled_flight_time.py  scheduled_turnaround.py
roster_generator/schedule/: __init__.py  _rejection_log.py  _schedule_capacity.py  _schedule_data_manager.py  _schedule_generator.py  _schedule_stats.py  _schedule_structures.py  capacity.py  data_manager.py  generator.py  schedule.py  schedule_main.py  stats.py  structures.py
tests/: __init__.py  test_airlines.py  test_airports.py  test_clean_bts_data.py  test_clean_data.py  test_config.py  test_initial_conditions.py  test_markov.py  test_output.py  test_routes.py  test_schedule.py  test_scheduled_flight_time.py  test_scheduled_turnaround.py  test_time_window.py
tutorials/: params.yaml  tutorial_basic.py  tutorial_bts.py  tutorial_bts_cleaning.py  tutorial_manipulation.py  tutorial_pipeline.py
