[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "roster-generator"
version = "0.3.6"
description = "Realistic flight schedule generation from empirical operational records."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "air traffic management",
    "aviation",
    "flight schedules",
    "simulation",
    "synthetic data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas",
    "numpy",
    "airportsdata",
    "aircraft-list",
    "pytz",
]

[project.optional-dependencies]
test = [
    "pytest",
]
release = [
    "build",
    "docutils>=0.21.2,<0.22",
    "packaging>=24.2,<25",
    "twine",
]
dev = [
    "build",
    "docutils>=0.21.2,<0.22",
    "packaging>=24.2,<25",
    "pytest",
    "twine",
]

[project.urls]
Homepage = "https://github.com/JBlank19/roster"
Repository = "https://github.com/JBlank19/roster"
Issues = "https://github.com/JBlank19/roster/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["roster_generator*"]
namespaces = false
